# mobile_robot

./: .gitignore
mobile_control/: CMakeLists.txt  package.xml
mobile_control/config/: mobile_control.yaml
mobile_control/include/mobile_control/: command_joints_action.h  mobile_control.h
mobile_control/launch/: mobile_control.launch
mobile_control/src/: command_joints_action.cpp  command_joints_app.cpp  go_initial_pose.cpp  mobile_control.cpp  test_MobileRobot.cpp
mobile_description/: CMakeLists.txt  package.xml
mobile_description/launch/: gazebo.launch  mobile_rviz.launch
mobile_description/meshes/: chassis.STL  m_base.STL  m_link_1.STL  m_link_2.STL  m_link_3.STL  m_link_4.STL  m_link_gripper.STL  manip_link_1.STL  manip_link_2.STL  manip_link_3.STL  manip_link_4.STL  manip_link_base.STL  manip_link_gripper.STL  wlb.STL  wlf.STL  wrb.STL  wrf.STL
mobile_description/rviz/: mobile.rviz  navigation.rviz  slam.rviz
mobile_description/urdf/: arm.gazebo  arm.xacro  macros.xacro  materials.xacro  mobile.gazebo  mobile.xacro  mobile_properties.xacro  properties.xacro  sensors.xacro
mobile_gazebo/: CMakeLists.txt  package.xml
mobile_gazebo/launch/: mobile_world.launch
mobile_gazebo/worlds/: cafe.world  empty.world  garage.world  random.world  test_field.world  test_field2.world
mobile_navigation/: CMakeLists.txt  package.xml
mobile_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  teb_local_planner_params.yaml
mobile_navigation/launch/: navigate.launch  slam_gmapping.launch
mobile_navigation/src/: odom.cpp  send_robot_goal.cpp
my_controller_msgs/: CMakeLists.txt  package.xml
my_controller_msgs/action/: JointPositions.action
my_controller_msgs/msg/: ControllerState.msg  DynamicPIDParameters.msg  SimpleControllerCommand.msg
my_controller_pkg/: CMakeLists.txt  my_controller_plugins.xml  package.xml
my_controller_pkg/include/my_controller_pkg/: ArmController.h  MobileController.h  Odometry.h  SimpleArmController.h  SimpleController.h  SpeedLimiter.h  WheelController.h  effort_test_controller.h  my_robot_hw.h
my_controller_pkg/launch/: test.launch
my_controller_pkg/src/: ArmController.cpp  MobileController.cpp  Odometry.cpp  SimpleArmController.cpp  SimpleController.cpp  SpeedLimiter.cpp  WheelController.cpp  dummy_app.cpp  effort_test_controller.cpp  my_robot_hw.cpp
my_filter_pkg/: CMakeLists.txt  package.xml
my_filter_pkg/include/my_filter_pkg/: ExpAveragingFilter.h  LowPassFilter.h
my_filter_pkg/src/: ExpAveragingFilter.cpp  LowPassFilter.cpp
