<?xml version="1.0"?>
<package>
  <name>mobile_control</name>
  <version>0.0.0</version>
  <description>The mobile_control package</description>

  <maintainer email="me@todo.todo">me</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>my_controller_pkg</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <!-- <run_depend>ros_controllers</run_depend> -->
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>my_controller_pkg</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>

  <run_depend>effort_controllers</run_depend>

  <export>
  </export>
</package>
