<?xml version="1.0"?>
<package>
  <name>mobile_gazebo</name>
  <version>0.0.0</version>
  <description>The mobile_gazebo package</description>

  <maintainer email="me@todo.todo">me</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>mobile_control</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>mobile_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>turtlebot_teleop</run_depend>

  <export>
  </export>

</package>